gave header z-index, fixed search?...

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ header {
   position: sticky;
   top: 0;
   background-color: gray;
+  z-index: 1;
 }
 
 /********************* dropdowns *********************/
